--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.6",
-    "react": "^16.6.1",
-    "react-dom": "^16.6.1"
+    "react": "^16.6.3",
+    "react-dom": "^16.6.1",
+    "react-redux": "^5.1.1",
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "react-scripts": "2.1.1"
