--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "redux": "^4.0.1"
   },
   "devDependencies": {
+    "react-app-rewire-scss": "^1.0.2",
+    "react-app-rewired": "^1.6.2",
     "react-scripts": "2.1.1"
   },
   "scripts": {
