--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "notes",
+  "name": "fretboard",
   "version": "0.1.0",
-  "homepage": "https://johndjameson.github.io/notes",
+  "homepage": "https://johndjameson.github.io/fretboard",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
